Source/Test/Services/Template/template-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-web-deployment
  labels:
    app: template-web
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: template-web
  template:
    metadata:
      labels:
        app: template-web
    spec:
      containers:
        - name: template-web
          image: <acr-url>/<image-name>:stable
          # readinessProbe:
          #   httpGet:
          #     path: /health/ready
          #     port: 80
          # livenessProbe:
          #   httpGet:
          #     path: /health/live
          #     port: 80
          - name: DOTNET_ENVIRONMENT
            valueFrom:
              configMapKeyRef:
                name: shared-configmap
                key: environment
          - name: KeyVaultOptions__Enabled
            valueFrom:
              configMapKeyRef:
                name: shared-configmap
                key: key-vault-enabled
                optional: true
          - name: KeyVaultOptions__TenantId
            valueFrom:
              secretKeyRef:
                name: shared-secret
                key: KeyVaultOptions__TenantId
          - name: KeyVaultOptions__ClientId
            valueFrom:
              secretKeyRef:
                name: shared-secret
                key: KeyVaultOptions__ClientId
          - name: KeyVaultOptions__ClientSecret
            valueFrom:
              secretKeyRef:
                name: shared-secret
                key: KeyVaultOptions__ClientSecret
      restartPolicy: Always
